# neuron_demo_i2c

./: .gitignore  CMakeLists.txt  neuron_demo_iic.nppws  package.xml
include/neuron_demo_iic/: neuronIIc.hpp  neuronIIcNode.hpp
include/neuron_iic/: neuronIIc.hpp  neuronIIcNode.hpp
src/: main.cpp  neuronIIc.cpp  neuronIIcNode.cpp
